# worldsim-bevy

./: Cargo.toml
src/: cell_grid.rs  main.rs  planet_gen.rs
