[package]
name = "world_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_egui = "0.21"
bevy_panorbit_camera = "0.8.0"
bevy_rapier3d = "0.22"
bevy_mod_picking = "0.15.0"
bracket-noise = "0.8.7"
bevy_pancam = "0.9.0"
[workspace]
resolver = "2" 


[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3